--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^144.0.0",
     "mongodb": "^6.13.0",
     "next": "15.1.6",
     "nodemailer": "^6.10.0",
